add empty content

--- a/app/css/time.scss
+++ b/app/css/time.scss
@@ -14,7 +14,7 @@ $bordercolor:#dedede;
     .time-head{
         width: 100%;
         text-align: center;
-        .year{
+        .year,.munth{
             display: inline-block;
             font-size: 18px;
             padding: 5px;
