--- a/app/css/time.scss
+++ b/app/css/time.scss
@@ -33,9 +33,29 @@ $bordercolor:#dedede;
             width: 100%;
             height: 100%;
             font-size: 12px;
-            text-align: center;
             line-height: 30px;
-           
+            cursor: pointer;
+            .text-day{
+                display: inline-block;
+                position: relative;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+                font-size: 12px;
+            }
+            .is-below{
+                display: block;
+                left: auto;
+                top: auto;
+                transform: translate(0, 0);
+                text-align: center;
+                line-height: 13px;
+            }
+            .below-text{
+                color: blue;
+                text-align: center;
+                font-size: 12px;
+            }
         }
         .time-in-block{
             width: percentage(1/7);
@@ -59,6 +79,9 @@ $bordercolor:#dedede;
                 border-right: 1px solid $bordercolor;
                 
             }
+        }
+        .time-in-color{
+            background: #FFC107;
         }
         .noborder-top{
             border-top: none;
